--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "hackathon-starter",
   "version": "0.0.0",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/sahat/hackathon-starter.git"
-  },
-  "scripts": {
-    "start": "node app.js",
-    "test": "mocha"
   },
   "dependencies": {
     "async": "~0.6.1",
@@ -20,7 +17,7 @@
     "connect-assets": "~3.0.0-beta2",
     "connect-mongo": "~0.4.0",
     "csso": "~1.3.11",
-    "express": "~3.5.1",
+    "express": "3.4.7",
     "express-flash": "~0.0.2",
     "express-validator": "~2.1.1",
     "fbgraph": "~0.2.10",
@@ -32,7 +29,7 @@
     "node-foursquare": "~0.2.0",
     "node-linkedin": "~0.1.5",
     "nodemailer": "~0.6.1",
-    "passport": "~0.2.0",
+    "passport": "~0.1.18",
     "passport-facebook": "~1.0.3",
     "passport-github": "~0.1.5",
     "passport-google-oauth": "~0.1.5",
@@ -41,19 +38,17 @@
     "passport-oauth": "~1.0.0",
     "passport-twitter": "~1.0.2",
     "paypal-rest-sdk": "~0.6.4",
-    "request": "~2.34.0",
+    "request": "~2.31.0",
     "tumblr.js": "~0.0.4",
     "twilio": "~1.6.0",
     "twit": "~1.1.12",
     "underscore": "~1.6.0",
     "uglify-js": "~2.4.12",
     "validator": "~3.5.1",
-    "express": "3.4.7",
     "ejs": "*",
     "stylus": "*",
     "docpad": "~6.*.*",
-    "request": "~2.31.0",
-    "passport": "~0.1.18"
+    "ayah": "^0.1.0"
   },
   "devDependencies": {
     "mocha": "~1.18.2",
